// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PluginListHeader /> should renders correctly when filter button was pressed 1`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <PTButton
      accessKey="G"
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h2
    className="panel-title"
  >
    Test Panel Title
  </h2>
  <div
    className="panel-filter"
  >
    <div
      className="inner-addon addon-left"
    >
      <div
        className="addon"
      >
        <i
          className="fa fa-filter"
        />
      </div>
      <input
        autoFocus={true}
        className="form-control"
        onChange={[Function]}
        placeholder="Filter..."
      />
    </div>
  </div>
</div>
`;

exports[`Component <PluginListHeader /> should renders correctly when filter button was pressed 2`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <PTButton
      accessKey="G"
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h2
    className="panel-title"
  >
    Test Panel Title
  </h2>
</div>
`;

exports[`Component <PluginListHeader /> should renders with all props correctly 1`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <PTButton
      aria-label="Expand / Collapse"
      className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-expand"
      />
      <i
        className="btn-icon fa fa-compress"
      />
    </PTButton>
    <PTButton
      aria-label="Table"
      className="btn btn-success btn-inverse btn-dropdown-toggle btn-table"
    >
      <i
        className="btn-icon fa fa-table"
      />
    </PTButton>
    <PTButton
      accessKey="G"
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h2
    className="panel-title"
  >
    Test Panel Title
  </h2>
</div>
`;

exports[`Component <PluginListHeader /> should renders without some buttons correctly 1`] = `
<div
  className="panel-heading"
>
  <div
    className="control-group right"
  >
    <PTButton
      accessKey="G"
      aria-label="Filter"
      className="btn btn-success btn-inverse btn-filter"
      onClick={[Function]}
    >
      <i
        className="btn-icon fa fa-filter"
      />
    </PTButton>
  </div>
  <h2
    className="panel-title"
  >
    Test Panel Title
  </h2>
</div>
`;
